updated README.md updated POM file commented out AWS scanning, until i can fix it